--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>Oskar Radon</h1>
       <h4>Digital product designer,</h4>
       <h4>Graphic designer,</h4>
-      <h4>Front&ndash;end web developer</h4>
+      <h4>& Front&ndash;end web developer</h4>
       <h4>&rarr; Portland, OR</h4>
       <section id="links">
         <a href="mailto:oradonkimball@pnca.edu?subject=hello">email</a>
