--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   </head>
   <body>
     <main>
-      <h1>Oskar Radon</h1>
-      <h4>Digital product designer,</h4>
-      <h4>Graphic designer,</h4>
-      <h4>& Front&ndash;end web developer</h4>
-      <h4>&rarr; Portland, OR</h4>
+      <section id="intro">
+        <h1>Oskar Radon</h1>
+        <a href="#" id="product"><h4><span class="dot red"></span>Digital product designer,</h4></a>
+        <a href="#" id="graphic"><h4><span class="dot blue"></span>Graphic designer,</h4></a>
+        <h4 id="amp">& </h4><a href="#" id="front-end"><span class="dot green"></span><h4>Front&ndash;end developer</h4></a>
+        <h4>&rarr; Portland, OR</h4>
+      </section>
       <section id="links">
         <a href="mailto:oradonkimball@pnca.edu?subject=hello">email</a>
         <a href="https://www.are.na/oskar-radon">are.na</a>
