--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div id="marquee">
-        Portfolio under development, please check back soon!
+        Portfolio under development, please check back soon! :)
       </div>
     </header>
     <main>
