--- a/index.html
+++ b/index.html
@@ -4,55 +4,157 @@
     <meta charset="utf-8">
     <title>Oskar Radon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/index.css">
   </head>
   <body>
     <header>
-      <div id="marquee">
+      <!-- <div id="marquee">
         Portfolio under development, please check back soon! :)
+      </div> -->
+      <div>
+        <span id="name">Oskar Radon</span>
+
+        <nav>
+          <a href="/index.html#projects">Projects</a>
+          <a href="/experiments.html">Experiments</a>
+          <a href="/index.html">About</a>
+        </nav>
       </div>
     </header>
     <main>
       <section id="intro">
-        <h1>Oskar Radon</h1>
-        <a href="#" id="product"><h4><span class="dot red"></span>Digital product designer,</h4></a>
-        <a href="#" id="graphic"><h4><span class="dot blue"></span>Graphic designer,</h4></a>
-        <h4 id="amp">& </h4><a href="#" id="front-end"><span class="dot green"></span><h4>Front&ndash;end developer</h4></a>
-        <h4>&rarr; Portland, OR</h4>
+        <div>
+          <h1>Oskar Radon</h1>
+          <a href="#" id="product"><h4><span class="dot digi"></span>Digital product designer,</h4></a>
+          <a href="#" id="graphic"><h4><span class="dot grfx"></span>Graphic designer,</h4></a>
+          <h4 id="amp">& </h4><a href="#" id="front-end"><span class="dot dev"></span><h4>Front&ndash;end developer</h4></a>
+          <h4>&rarr; Portland, OR</h4>
+          <div id="links">
+            <a href="mailto:oradonkimball@pnca.edu?subject=hello">email</a>
+            <a href="https://www.are.na/oskar-radon">are.na</a>
+            <a href="https://special.fish/oskar">special.fish</a>
+            <a href="https://github.com/oskarradon/">github</a>
+            <a href="https://twitter.com/oskarradon">twitter</a>
+            <a href="https://www.instagram.com/oskarradon/">instagram</a>
+          </div>
+        </div>
       </section>
-      <section id="links">
-        <a href="mailto:oradonkimball@pnca.edu?subject=hello">email</a>
-        <a href="https://www.are.na/oskar-radon">are.na</a>
-        <a href="https://special.fish/oskar">special.fish</a>
-        <a href="https://github.com/oskarradon/">github</a>
-        <a href="https://twitter.com/oskarradon">twitter</a>
-        <a href="https://www.instagram.com/oskarradon/">instagram</a>
+      <section id="projects">
+        <h2>Projects:</h2>
+        <article>
+          <div class="upper">
+            <h4 class="title">XBOX 720° Exhibition</h4>
+            <h4 class="date">2019</h4>
+            <div class="disciplines"><span class="dot grfx"></span></div>
+          </div>
+        </article>
+
+        <article>
+          <div class="upper">
+            <h4 class="title">Discursive Impulse</h4>
+            <h4 class="date">2019</h4>
+            <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span></div>
+          </div>
+        </article>
+
+        <article>
+          <div class="upper">
+            <h4 class="title">Alar</h4>
+            <h4 class="date">2019</h4>
+            <div class="disciplines"><span class="dot digi"></span></div>
+          </div>
+        </article>
+
+        <article>
+          <div class="upper">
+            <h4 class="title">Emily Thackray</h4>
+            <h4 class="date">2019</h4>
+            <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span></div>
+          </div>
+        </article>
+
+        <article>
+          <div class="upper">
+            <h4 class="title">Vote To Save Our Planet</h4>
+            <h4 class="date">2019</h4>
+            <div class="disciplines"><span class="dot grfx"></span></div>
+          </div>
+        </article>
+
+        <article>
+          <div class="upper">
+            <h4 class="title">Design Club</h4>
+            <h4 class="date">2019</h4>
+            <div class="disciplines"><span class="dot grfx"></span></div>
+          </div>
+        </article>
+
+        <article>
+          <div class="upper">
+            <h4 class="title">Unknown Artist Exhibition</h4>
+            <h4 class="date">2019</h4>
+            <div class="disciplines"><span class="dot grfx"></span></div>
+          </div>
+        </article>
+
+        <article>
+          <div class="upper">
+            <h4 class="title">A Survey of Graphic Design</h4>
+            <h4 class="date">2019</h4>
+            <div class="disciplines"><span class="dot grfx"></span></div>
+          </div>
+        </article>
+
+        <article>
+          <div class="upper">
+            <h4 class="title">Rock Climbing Book</h4>
+            <h4 class="date">2019</h4>
+            <div class="disciplines"><span class="dot grfx"></span></div>
+          </div>
+        </article>
+
+        <article>
+          <div class="upper">
+            <h4 class="title">PNCA Re&ndash;design</h4>
+            <h4 class="date">2017</h4>
+            <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span></div>
+          </div>
+        </article>
+
+        <article>
+          <div class="upper">
+            <h4 class="title">Album Art Exchange</h4>
+            <h4 class="date">2016</h4>
+            <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span></div>
+          </div>
+        </article>
+
+        <article>
+          <div class="upper">
+            <h4 class="title">PIVA</h4>
+            <h4 class="date">2016</h4>
+            <div class="disciplines"><span class="dot dev"></span></div>
+          </div>
+        </article>
+
+        <article>
+          <div class="upper">
+            <h4 class="title">Lux</h4>
+            <h4 class="date">2016</h4>
+            <div class="disciplines"><span class="dot dev"></span></div>
+          </div>
+        </article>
+
+        <article>
+          <div class="upper">
+            <h4 class="title">Orchard47</h4>
+            <h4 class="date">2016</h4>
+            <div class="disciplines"><span class="dot dev"></span></div>
+          </div>
+        </article>
       </section>
     </main>
   </body>
-  <script type="text/javascript">
-  window.addEventListener('load', function () {
-    function go() {
-      i = i < width ? i + step : 1;
-      m.style.marginLeft = -i + 'px';
-    }
-    var i = 0,
-      step = 3,
-      space = '&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;';
-    var m = document.getElementById('marquee');
-    var t = m.innerHTML; //text
-    m.innerHTML = t + space;
-    m.style.position = 'absolute'; // http://stackoverflow.com/questions/2057682/determine-pixel-length-of-string-in-javascript-jquery/2057789#2057789
-    var width = (m.clientWidth + 1);
-    m.style.position = '';
-    m.innerHTML = t + space + t + space + t + space + t + space + t;
-    m.addEventListener('mouseenter', function () {
-      step = 0;
-    }, true);
-    m.addEventListener('mouseleave', function () {
-      step = 3;
-    }, true);
-    var x = setInterval(go, 50);
-    }, true);
-  </script>
+  <script src="/assets/js/app.js" charset="utf-8"></script>
 </html>
