working on 'updated' tag

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <article>
           <div class="upper">
             <h4 class="title">XBOX 720° Exhibition</h4>
-            <h4 class="date">2019</h4>
+            <h4 class="date">2019<span class="update">Updated!</span></h4>
             <div class="disciplines"><span class="dot grfx"></span></div>
           </div>
         </article>
@@ -85,7 +85,7 @@
         <article>
           <div class="upper">
             <h4 class="title">Design Club</h4>
-            <h4 class="date">2019</h4>
+            <h4 class="date">2019<span class="update">Updated!</span></h4>
             <div class="disciplines"><span class="dot grfx"></span></div>
           </div>
         </article>
@@ -93,7 +93,7 @@
         <article>
           <div class="upper">
             <h4 class="title">Unknown Artist Exhibition</h4>
-            <h4 class="date">2019</h4>
+            <h4 class="date">2019<span class="update">Updated!</span></h4>
             <div class="disciplines"><span class="dot grfx"></span></div>
           </div>
         </article>
@@ -140,6 +140,14 @@
 
         <article>
           <div class="upper">
+            <h4 class="title">Atrium of the Sun</h4>
+            <h4 class="date">2016</h4>
+            <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span></div>
+          </div>
+        </article>
+
+        <article>
+          <div class="upper">
             <h4 class="title">Lux</h4>
             <h4 class="date">2016</h4>
             <div class="disciplines"><span class="dot dev"></span></div>
@@ -149,7 +157,7 @@
         <article>
           <div class="upper">
             <h4 class="title">Orchard47</h4>
-            <h4 class="date">2016</h4>
+            <h4 class="date">2015</h4>
             <div class="disciplines"><span class="dot dev"></span></div>
           </div>
         </article>
