--- a/index.html
+++ b/index.html
@@ -42,6 +42,23 @@
       </section>
       <section id="projects">
         <h2>Projects:</h2>
+
+        <article>
+          <div class="upper">
+            <h4 class="title">Lift Off</h4>
+            <h4 class="date">2020</h4>
+            <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span><span class="dot grfx"></span></div>
+          </div>
+        </article>
+
+        <article>
+          <div class="upper">
+            <h4 class="title">Open Source Fonts</h4>
+            <h4 class="date">2020</h4>
+            <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span></div>
+          </div>
+        </article>
+
         <article>
           <div class="upper">
             <h4 class="title">XBOX 720° Exhibition</h4>
@@ -68,7 +85,7 @@
 
         <article>
           <div class="upper">
-            <h4 class="title">Emily Thackray</h4>
+            <h4 class="title">Emily Thackray Portfolio</h4>
             <h4 class="date">2019</h4>
             <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span></div>
           </div>
@@ -118,6 +135,14 @@
           <div class="upper">
             <h4 class="title">PNCA Re&ndash;design</h4>
             <h4 class="date">2017</h4>
+            <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span></div>
+          </div>
+        </article>
+
+        <article>
+          <div class="upper">
+            <h4 class="title">Sarah Meadows Portfolio</h4>
+            <h4 class="date">2016<span class="update">Updated!</span></h4>
             <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span></div>
           </div>
         </article>
