--- a/index.html
+++ b/index.html
@@ -4,17 +4,13 @@
     <meta charset="utf-8">
     <title>Oskar Radon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="assets/css/header.css">
-    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/templates/index.css">
   </head>
   <body>
     <header>
-      <!-- <div id="marquee">
-        Portfolio under development, please check back soon! :)
-      </div> -->
       <div>
         <span id="name">Oskar Radon</span>
-
         <nav>
           <a href="/index.html#projects">Projects</a>
           <a href="/experiments.html">Experiments</a>
