--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <main>
       <section id="intro">
         <h1>Oskar Radon</h1>
-        <a href="#" id="product"><h4><span class="dot red"></span>Digital product designer,</h4></a>
-        <a href="#" id="graphic"><h4><span class="dot blue"></span>Graphic designer,</h4></a>
+        <a href="#" id="product"><h4><span class="dot red"></span>Book design,</h4></a>
+        <a href="#" id="graphic"><h4><span class="dot blue"></span>Interactive design,</h4></a>
         <h4 id="amp">& </h4><a href="#" id="front-end"><span class="dot green"></span><h4>Front&ndash;end developer</h4></a>
         <h4>&rarr; Portland, OR</h4>
       </section>
@@ -25,8 +25,6 @@
         <a href="https://www.are.na/oskar-radon">are.na</a>
         <a href="https://special.fish/oskar">special.fish</a>
         <a href="https://github.com/oskarradon/">github</a>
-        <a href="https://twitter.com/oskarradon">twitter</a>
-        <a href="https://www.instagram.com/oskarradon/">instagram</a>
       </section>
     </main>
   </body>
