--- a/index.html
+++ b/index.html
@@ -9,180 +9,40 @@
   </head>
   <body>
     <header>
-      <div>
-        <span id="name">Oskar Radon</span>
-        <nav>
-          <a href="/index.html#projects">Projects</a>
-          <a href="/experiments.html">Experiments</a>
-          <a href="/index.html">About</a>
-        </nav>
-      </div>
+      <h1>
+        Hey I’m <b>Oskar Radon</b>. I am a graphic designer,<br>
+        interactive designer, and front-end developer.<br>
+ I live in Portland, OR. Send me an email <b><a href="mailto:oskarradon@protonmail.com">here</a></b>.<br>
+        CV and PDF portfolio are available upon request :)</h1>
+        <h1 id="clients">
+          <b>Selected clients:</b><br>
+          Orchard47, PICA,<br>
+          Sequence Press,<br>
+          WebMD, PNCA.
+        </h1>
+        <section id="education">
+          <h1>
+            <b>Education:</b><br>
+            <span>BFA Graphic </span>Design<br>
+            <span>Web Dev. </span>Cert.<br>
+            <span>UX Design </span>Cert.<br>
+          </h1>
+          <h1>
+            <br>
+            PNCA<br>
+            Epicodus<br>
+            Hack Oregon
+          </h1>
+          <h1>
+            <br>
+            2020<br>
+            2016<br>
+            2016
+          </h1>
+        </section>
     </header>
     <main>
-      <section id="intro">
-        <div>
-          <h1>Oskar Radon</h1>
-          <a href="#" id="product"><h4><span class="dot digi"></span>Digital product designer,</h4></a>
-          <a href="#" id="graphic"><h4><span class="dot grfx"></span>Graphic designer,</h4></a>
-          <h4 id="amp">& </h4><a href="#" id="front-end"><span class="dot dev"></span><h4>Front&ndash;end developer</h4></a>
-          <h4>&rarr; Portland, OR</h4>
-          <div id="links">
-            <a href="mailto:oradonkimball@pnca.edu?subject=hello">email</a>
-            <a href="https://www.are.na/oskar-radon">are.na</a>
-            <a href="https://special.fish/oskar">special.fish</a>
-            <a href="https://github.com/oskarradon/">github</a>
-            <a href="https://twitter.com/oskarradon">twitter</a>
-            <a href="https://www.instagram.com/oskarradon/">instagram</a>
-          </div>
-        </div>
-      </section>
-      <section id="projects">
-        <h2>Projects:</h2>
 
-        <article>
-          <div class="upper">
-            <h4 class="title">Lift Off</h4>
-            <h4 class="date">2020</h4>
-            <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span><span class="dot grfx"></span></div>
-          </div>
-        </article>
-
-        <article>
-          <div class="upper">
-            <h4 class="title">Open Source Fonts</h4>
-            <h4 class="date">2020</h4>
-            <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span></div>
-          </div>
-        </article>
-
-        <article>
-          <div class="upper">
-            <h4 class="title">XBOX 720° Exhibition</h4>
-            <h4 class="date">2019<span class="update">Updated!</span></h4>
-            <div class="disciplines"><span class="dot grfx"></span></div>
-          </div>
-        </article>
-
-        <article>
-          <div class="upper">
-            <h4 class="title">Discursive Impulse</h4>
-            <h4 class="date">2019</h4>
-            <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span></div>
-          </div>
-        </article>
-
-        <article>
-          <div class="upper">
-            <h4 class="title">Alar</h4>
-            <h4 class="date">2019</h4>
-            <div class="disciplines"><span class="dot digi"></span></div>
-          </div>
-        </article>
-
-        <article>
-          <div class="upper">
-            <h4 class="title">Emily Thackray Portfolio</h4>
-            <h4 class="date">2019</h4>
-            <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span></div>
-          </div>
-        </article>
-
-        <article>
-          <div class="upper">
-            <h4 class="title">Vote To Save Our Planet</h4>
-            <h4 class="date">2019</h4>
-            <div class="disciplines"><span class="dot grfx"></span></div>
-          </div>
-        </article>
-
-        <article>
-          <div class="upper">
-            <h4 class="title">Design Club</h4>
-            <h4 class="date">2019<span class="update">Updated!</span></h4>
-            <div class="disciplines"><span class="dot grfx"></span></div>
-          </div>
-        </article>
-
-        <article>
-          <div class="upper">
-            <h4 class="title">Unknown Artist Exhibition</h4>
-            <h4 class="date">2019<span class="update">Updated!</span></h4>
-            <div class="disciplines"><span class="dot grfx"></span></div>
-          </div>
-        </article>
-
-        <article>
-          <div class="upper">
-            <h4 class="title">A Survey of Graphic Design</h4>
-            <h4 class="date">2019</h4>
-            <div class="disciplines"><span class="dot grfx"></span></div>
-          </div>
-        </article>
-
-        <article>
-          <div class="upper">
-            <h4 class="title">Rock Climbing Book</h4>
-            <h4 class="date">2019</h4>
-            <div class="disciplines"><span class="dot grfx"></span></div>
-          </div>
-        </article>
-
-        <article>
-          <div class="upper">
-            <h4 class="title">PNCA Re&ndash;design</h4>
-            <h4 class="date">2017</h4>
-            <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span></div>
-          </div>
-        </article>
-
-        <article>
-          <div class="upper">
-            <h4 class="title">Sarah Meadows Portfolio</h4>
-            <h4 class="date">2016<span class="update">Updated!</span></h4>
-            <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span></div>
-          </div>
-        </article>
-
-        <article>
-          <div class="upper">
-            <h4 class="title">Album Art Exchange</h4>
-            <h4 class="date">2016</h4>
-            <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span></div>
-          </div>
-        </article>
-
-        <article>
-          <div class="upper">
-            <h4 class="title">PIVA</h4>
-            <h4 class="date">2016</h4>
-            <div class="disciplines"><span class="dot dev"></span></div>
-          </div>
-        </article>
-
-        <article>
-          <div class="upper">
-            <h4 class="title">Atrium of the Sun</h4>
-            <h4 class="date">2016</h4>
-            <div class="disciplines"><span class="dot dev"></span><span class="dot digi"></span></div>
-          </div>
-        </article>
-
-        <article>
-          <div class="upper">
-            <h4 class="title">Lux</h4>
-            <h4 class="date">2016</h4>
-            <div class="disciplines"><span class="dot dev"></span></div>
-          </div>
-        </article>
-
-        <article>
-          <div class="upper">
-            <h4 class="title">Orchard47</h4>
-            <h4 class="date">2015</h4>
-            <div class="disciplines"><span class="dot dev"></span></div>
-          </div>
-        </article>
-      </section>
     </main>
   </body>
   <script src="/assets/js/app.js" charset="utf-8"></script>
