--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>
+      <h1 id="intro">
         Hey I’m <b>Oskar Radon</b>. I am a graphic designer,<br>
         interactive designer, and front-end developer.<br>
  I live in Portland, OR. Send me an email <b><a href="mailto:oskarradon@protonmail.com">here</a></b>.<br>
@@ -20,21 +20,25 @@
           Sequence Press,<br>
           WebMD, PNCA.
         </h1>
+        <h1 id="edu-title">
+          <b>Education:</b>
+        </h1>
         <section id="education">
           <h1>
-            <b>Education:</b><br>
-            <span>BFA Graphic </span>Design<br>
+            <span id="inner-title"><b>Education:</b></span>
+            BFA <span>Graphic Design</span><br>
             <span>Web Dev. </span>Cert.<br>
-            <span>UX Design </span>Cert.<br>
+            <span>UX Design </span>Cert.
+          </h1>
           </h1>
           <h1>
-            <br>
+            <span class="indent"><br></span>
             PNCA<br>
             Epicodus<br>
             Hack Oregon
           </h1>
           <h1>
-            <br>
+            <span class="indent"><br></span>
             2020<br>
             2016<br>
             2016
