--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         interactive designer, and front-end developer.<br>
  I live in Portland, OR. Send me an email <b><a href="mailto:oskarradon@protonmail.com">here</a></b>.<br>
         CV and PDF portfolio are available upon request :)</h1>
-        <h1 id="clients">
+        <h1 id="clients" class="more">
           <b>Selected clients:</b><br>
           Orchard47, PICA,<br>
           Sequence Press,<br>
           WebMD, PNCA.
         </h1>
-        <h1 id="edu-title">
+        <h1 id="edu-title" class="more">
           <b>Education:</b>
         </h1>
-        <section id="education">
+        <section id="education" class="more">
           <h1>
             <span id="inner-title"><b>Education:</b></span>
             BFA <span>Graphic Design</span><br>
@@ -44,10 +44,11 @@
             2016
           </h1>
         </section>
+        <h1 id="info-toggle"><b><a href="#">More info?</a></b></h1>
     </header>
     <main>
 
     </main>
   </body>
-  <script src="/assets/js/app.js" charset="utf-8"></script>
+  <script src="assets/js/app.js" charset="utf-8"></script>
 </html>
