--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         CV and PDF portfolio are available upon request :)</h1>
         <h1 id="clients" class="more">
           <b>Selected clients:</b><br>
-          Orchard47, PICA,<br>
+          Yale Union, PICA,<br>
           Sequence Press,<br>
           WebMD, PNCA.
         </h1>
@@ -47,8 +47,88 @@
         <h1 id="info-toggle"><b><a href="#">More info?</a></b></h1>
     </header>
     <main>
+      <a>
+        <section class="info">
+          <h1>001. <b>Flash</b></h1>
+          <h2>Book design, illustration, writing</h2>
+        </section>
+        <img src="work/flash/oskar-radon-flash-spread1.png" alt="">
+      </a>
 
+      <a>
+        <section class="info">
+          <h1>002. <b>Unknown Artist Exhibition</b></h1>
+          <h2>Poster design</h2>
+        </section>
+        <img src="work/unknown/oskar-radon-unknown1.png" class="poster" alt="">
+      </a>
+
+      <a>
+        <section class="info">
+          <h1>003. <b>A Survey of Graphic Design</b></h1>
+          <h2>Book design, writing</h2>
+        </section>
+        <img src="work/survey/oskar-radon-survey-spread1.png" alt="">
+      </a>
+
+      <a>
+        <section class="info">
+          <h1>004. <b>Patterning</b></h1>
+          <h2>Book design</h2>
+        </section>
+        <img src="work/patterning/oskar-radon-patterning-cover.png" alt="">
+      </a>
+
+      <a>
+        <section class="info">
+          <h1>005. <b>Organize Your Own Exhibition</b></h1>
+          <h2>Poster design</h2>
+        </section>
+        <img src="work/organize-your-own/oskar-radon-organize-your-own1.png" class="poster" alt="">
+      </a>
+
+      <a>
+        <section class="info">
+          <h1>006. <b>Multiple Formats Exhibition</b></h1>
+          <h2>Identity, poster design, illustration</h2>
+        </section>
+        <img src="work/multiple-formats/oskar-radon-multiple-formats1.png" class="poster" alt="">
+      </a>
+
+      <a>
+        <section class="info">
+          <h1>999. <b>Experiments</b></h1>
+          <h2>Illustration, painting</h2>
+        </section>
+        <img src="work/plaster-painting/oskar-radon-plaster-painting1.png" class="poster" alt="">
+      </a>
     </main>
+    <footer>
+
+      <h1>
+        <b>Land acknowledgement:</b><br>
+        I currently live <b><a href="https://native-land.ca/">on occupied Stl’pulmsh (Cowlitz) and Clackamas land</a></b>. “Decolonization eliminates settler property rights and settler sovereignty. It requires the abolition of land as property and upholds the sovereignty of Native land and people.” — <b><a href="https://jps.library.utoronto.ca/index.php/des/article/view/18630/15554">Tuck & Yang, 2012.</a></b><br><br>
+        <!-- <b>Web ring:</b><br>
+        <b><a href="http://www.nevillerk.com/">Neville Radon-Kimball</a></b><br>
+        <b><a href="http://lisaradon.com/">Lisa Radon</a></b><br>
+        <b><a href="https://jasonschuermann.github.io/">Jason Schuermann</a></b><br>
+        <b><a href="http://bestgraphicdesignerintheworld.com/">David Chathas</a></b><br>
+        <br> -->
+        <b>Colophon:</b><br>
+        Type set in Alte Haas Grotesk,<br>
+        designed by <a href="http://www.yannlecoroller.com/">Yann Le Coroller</a> in 2007.<br>
+        It is available <a href="https://www.dafont.com/alte-haas-grotesk.font">here</a> from Dafont.
+        <br>
+        <br>
+        <b>Links:</b>&nbsp; &nbsp; <span><br></span>
+        <a href="https://github.com/oskarradon/">Github</a>&nbsp; &nbsp;
+        <a href="https://www.are.na/oskar-radon">Are.na</a>&nbsp; &nbsp;
+        <a href="mailto:oskarradon@protonmail.com">Email</a>&nbsp; &nbsp;
+        <a href="https://special.fish/oskar">special.fish</a>&nbsp; &nbsp;
+      </h1>
+
+
+    </footer>
   </body>
   <script src="assets/js/app.js" charset="utf-8"></script>
 </html>
