add multi sized images

--- a/index.html
+++ b/index.html
@@ -52,7 +52,19 @@
           <h1>001. <b>Flash</b></h1>
           <h2>Book design, illustration, writing</h2>
         </section>
-        <img src="work/flash/oskar-radon-flash-spread1.png" alt="">
+        <img loading="lazy"
+             srcset="work/001-flash/flash-1-550w.png 550w,
+                     work/001-flash/flash-1-800w.png 800w,
+                     work/001-flash/flash-1-1200w.png 1200w,
+                     work/001-flash/flash-1-2000w.png 2000w,
+                     work/001-flash/flash-1-full.png 4845w"
+             sizes="(max-width: 550px) 550px,
+                    (max-width: 800px) 800px,
+                    (max-width: 1200px) 1200px,
+                    (max-width: 2000px) 2000px,
+                    4845px"
+             src="work/001-flash/flash-1-full.png"
+             alt="Book spread showing video stills of climbers and digital collage of climbing tools">
       </a>
 
       <a>
@@ -60,7 +72,20 @@
           <h1>002. <b>Unknown Artist Exhibition</b></h1>
           <h2>Poster design</h2>
         </section>
-        <img src="work/unknown/oskar-radon-unknown1.png" class="poster" alt="">
+        <img class="poster"
+             loading="lazy"
+             srcset="work/002-unknown/unknown-1-550w.png 550w,
+                     work/002-unknown/unknown-1-800w.png 800w,
+                     work/002-unknown/unknown-1-1200w.png 1200w,
+                     work/002-unknown/unknown-1-2000w.png 2000w,
+                     work/002-unknown/unknown-1-full.png 5250w"
+             sizes="(max-width: 550px) 550px,
+                    (max-width: 800px) 800px,
+                    (max-width: 1200px) 1200px,
+                    (max-width: 2000px) 2000px,
+                    5250px"
+             src="work/002-unknown/unknown-1-full.png"
+             alt="">
       </a>
 
       <a>
@@ -68,7 +93,19 @@
           <h1>003. <b>A Survey of Graphic Design</b></h1>
           <h2>Book design, writing</h2>
         </section>
-        <img src="work/survey/oskar-radon-survey-spread1.png" alt="">
+        <img loading="lazy"
+             srcset="work/003-survey/survey-spread-1-550w.png 550w,
+                     work/003-survey/survey-spread-1-800w.png 800w,
+                     work/003-survey/survey-spread-1-1200w.png 1200w,
+                     work/003-survey/survey-spread-1-2000w.png 2000w,
+                     work/003-survey/survey-spread-1-full.png 5250w"
+             sizes="(max-width: 550px) 550px,
+                    (max-width: 800px) 800px,
+                    (max-width: 1200px) 1200px,
+                    (max-width: 2000px) 2000px,
+                    5250px"
+             src="work/003-survey/survey-spread-1-full.png"
+             alt="">
       </a>
 
       <a>
@@ -76,7 +113,19 @@
           <h1>004. <b>Patterning</b></h1>
           <h2>Book design</h2>
         </section>
-        <img src="work/patterning/oskar-radon-patterning-cover.png" alt="">
+        <img loading="lazy"
+             srcset="work/004-patterning/patterning-cover-550w.png 550w,
+                     work/004-patterning/patterning-cover-800w.png 800w,
+                     work/004-patterning/patterning-cover-1200w.png 1200w,
+                     work/004-patterning/patterning-cover-2000w.png 2000w,
+                     work/004-patterning/patterning-cover-full.png 5250w"
+             sizes="(max-width: 550px) 550px,
+                    (max-width: 800px) 800px,
+                    (max-width: 1200px) 1200px,
+                    (max-width: 2000px) 2000px,
+                    5250px"
+             src="work/004-patterning/patterning-cover-full.png"
+             alt="">
       </a>
 
       <a>
@@ -84,7 +133,20 @@
           <h1>005. <b>Organize Your Own Exhibition</b></h1>
           <h2>Poster design</h2>
         </section>
-        <img src="work/organize-your-own/oskar-radon-organize-your-own1.png" class="poster" alt="">
+        <img class="poster"
+             loading="lazy"
+             srcset="work/005-organize-your-own/organize-your-own-1-550w.png 550w,
+                     work/005-organize-your-own/organize-your-own-1-800w.png 800w,
+                     work/005-organize-your-own/organize-your-own-1-1200w.png 1200w,
+                     work/005-organize-your-own/organize-your-own-1-2000w.png 2000w,
+                     work/005-organize-your-own/organize-your-own-1-full.png 5250w"
+             sizes="(max-width: 550px) 550px,
+                    (max-width: 800px) 800px,
+                    (max-width: 1200px) 1200px,
+                    (max-width: 2000px) 2000px,
+                    5250px"
+             src="work/005-organize-your-own/organize-your-own-1-full.png"
+             alt="">
       </a>
 
       <a>
@@ -92,16 +154,29 @@
           <h1>006. <b>Multiple Formats Exhibition</b></h1>
           <h2>Identity, poster design, illustration</h2>
         </section>
-        <img src="work/multiple-formats/oskar-radon-multiple-formats1.png" class="poster" alt="">
+        <img class="poster"
+             loading="lazy"
+             srcset="work/006-multiple-formats/multiple-formats-1-550w.png 550w,
+                     work/006-multiple-formats/multiple-formats-1-800w.png 800w,
+                     work/006-multiple-formats/multiple-formats-1-1200w.png 1200w,
+                     work/006-multiple-formats/multiple-formats-1-2000w.png 2000w,
+                     work/006-multiple-formats/multiple-formats-1-full.png 5250w"
+             sizes="(max-width: 550px) 550px,
+                    (max-width: 800px) 800px,
+                    (max-width: 1200px) 1200px,
+                    (max-width: 2000px) 2000px,
+                    5250px"
+             src="work/006-multiple-formats/multiple-formats-1-full.png"
+             alt="">
       </a>
 
-      <a>
+      <!-- <a>
         <section class="info">
           <h1>999. <b>Experiments</b></h1>
-          <h2>Illustration, painting</h2>
+          <h2>Illustration, painting, 3D</h2>
         </section>
         <img src="work/plaster-painting/oskar-radon-plaster-painting1.png" class="poster" alt="">
-      </a>
+      </a> -->
     </main>
     <footer>
 
